Atualizacoes e inicio do desenvolvimento estetico

--- a/pages/resultado/resultado.html
+++ b/pages/resultado/resultado.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz de Programação</title>
     <link rel="stylesheet" href="../style.css">
-    <script src="index.js" defer></script>
+    <script src="resultado.js" defer></script>
 </head>
 <body>
     <div class="container">
-        <h2>Quiz sobre Programação</h2>
-        <h3>Você sabe tudo sobre programação?</h3>
-        <h3>Começe o teste e saiba quantos pontos você consegue obter.</h3>
-        <button id="botao-comecar" class="botao">Começar</button>
+        <h2>Resultado</h2>
+        <div id="pontuacao">Pontuação</div>
+        <div id="mensagem">Mensagem</div>
+        <button id="botao-recomecar" class="botao">Início</button>
     </div>
 </body>
 </html>
