--- a/pages/Index/index.html
+++ b/pages/Index/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <div class="container">
-        <h2>Quiz sobre Programação</h2>
-        <h3>Você sabe tudo sobre programação?</h3>
-        <h3>Começe o teste e saiba quantos pontos você consegue obter.</h3>
+        <h2 id="titulo">Quiz sobre programação</h2>
+        <h3 id="subtitulo" class="estiloTxt">Você sabe tudo sobre programação?</h3>
+        <h3 id="informacao" class="estiloTxt">Começe o teste e saiba quantos pontos você consegue obter.</h3>
         <button id="botao-comecar" class="botao">Começar</button>
     </div>
 </body>
