--- a/pages/resultado/resultado.html
+++ b/pages/resultado/resultado.html
@@ -9,9 +9,10 @@
 </head>
 <body>
     <div class="container">
-        <h2>Resultado</h2>
-        <div id="pontuacao">Pontuação</div>
-        <div id="mensagem">Mensagem</div>
+        <h2 id="titulo-resultado">Resultado</h2>
+        <div id="pontuacao" class="estiloTxt">Pontuação</div>
+        <div id="mensagem" class="estiloTxt">Mensagem</div>
+        <div id="respostas" class="estiloTxt">Perguntas e Respostas Corretas</div>
         <button id="botao-recomecar" class="botao">Início</button>
     </div>
 </body>
